Bug 12604 - Commit 31a12666d8f0c22235297e1c1575f82061480029 slows down Berkeley DB
Summary: Commit 31a12666d8f0c22235297e1c1575f82061480029 slows down Berkeley DB
Status: CLOSED CODE_FIX
Alias: None
Product: Memory Management
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Andrew Morton
URL:
Keywords:
Depends on:
Blocks: 12398
  Show dependency tree
 
Reported: 2009-02-01 14:33 UTC by Rafael J. Wysocki
Modified: 2009-02-12 13:33 UTC (History)
0 users

See Also:
Kernel Version: commit 31a12666d8f0c22235297e1c1575f82061480029
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2009-02-01 14:33:50 UTC
Subject    : Commit 31a12666d8f0c22235297e1c1575f82061480029 slows down Berkeley DB
Submitter  : Jan Kara <jack@suse.cz>
Date       : 2009-01-30 1:23
References : http://marc.info/?l=linux-kernel&m=123327862901800&w=4

This entry is being used for tracking a regression from 2.6.28.  Please don't
close it until the problem is fixed in the mainline.

Caused by:

commit 31a12666d8f0c22235297e1c1575f82061480029
Author: Nick Piggin <npiggin@suse.de>
Date:   Tue Jan 6 14:39:04 2009 -0800

    mm: write_cache_pages cyclic fix

    Signed-off-by: Nick Piggin <npiggin@suse.de>
    Cc: Chris Mason <chris.mason@oracle.com>
    Cc: Dave Chinner <david@fromorbit.com>
    Signed-off-by: Andrew Morton <akpm@linux-foundation.org>
    Signed-off-by: Linus Torvalds <torvalds@linux-foundation.org>

First-Bad-Commit : 31a12666d8f0c22235297e1c1575f82061480029

Note You need to log in before you can comment on or make changes to this bug.